--- a/app/boxoffice.html
+++ b/app/boxoffice.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="bower_components/skeleton-css/css/skeleton.css">
     <link rel="stylesheet" href="loading.css">
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="boxoffice.app.css">
+    <link rel="stylesheet" href="common.app.css">
     <!-- /stylesheets -->
 </head>
 <body>
