Split up events module into customer and boxoffice part

--- a/app/customer.html
+++ b/app/customer.html
@@ -48,7 +48,7 @@
 <script src="common.seatplan.handlers/common.seatplan.handlers.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
 <script src="common.toolbar/common.toolbar.js"></script>
-<script src="common.events/common.events.js"></script>
+<script src="customer.events/customer.events.js"></script>
 <script src="common.event/common.event.js"></script>
 <script src="common.block/common.block.js"></script>
 <script src="customer.checkout/customer.checkout.js"></script>
