--- a/app/boxoffice.html
+++ b/app/boxoffice.html
@@ -47,7 +47,7 @@
 <script src="common.seatplan.handlers/common.seatplan.handlers.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
 <script src="common.toolbar/common.toolbar.js"></script>
-<script src="common.events/common.events.js"></script>
+<script src="boxoffice.events/boxoffice.events.js"></script>
 <script src="common.event/common.event.js"></script>
 <script src="common.block/common.block.js"></script>
 <script src="boxoffice.checkout/boxoffice.checkout.js"></script>
