--- a/app/boxoffice.events/boxoffice.events.html
+++ b/app/boxoffice.events/boxoffice.events.html
@@ -3,13 +3,13 @@
         <toolbar/>
     </div>
 </div>
-<div class="row">
-    <div class="twelve columns">
-        <ul class="item-list">
-            <li ng-repeat="event in events">
-                <a href="#/event/{{event.id}}">{{event.name}} - {{event.dateandtime}}</a>
-            </li>
-        </ul>
+<div class="row item-list-row" ng-repeat="event in events">
+    <div class="eight columns">
+        {{event.name}} - {{event.dateandtime}}
+    </div>
+    <div class="four columns">
+        <a class="button button-primary" href="#/event/{{event.id}}" translate>SELL TICKETS</a>
+        <a class="button button-primary" href="#/event/orders/{{event.id}}" translate>SELL ORDERS</a>
     </div>
 </div>
 <div class="row">
