--- a/app/customer.html
+++ b/app/customer.html
@@ -54,6 +54,7 @@
 <script src="common.block/common.block.js"></script>
 <script src="customer.checkout/customer.checkout.js"></script>
 <script src="customer.purchase/customer.purchase.js"></script>
+<script src="customer.purchase.summary/customer.purchase.summary.js"></script>
 <!-- /scripts -->
 </body>
 </html>
