--- a/app/customer.html
+++ b/app/customer.html
@@ -53,6 +53,7 @@
 <script src="common.event/common.event.js"></script>
 <script src="common.block/common.block.js"></script>
 <script src="customer.checkout/customer.checkout.js"></script>
+<script src="customer.checkout.summary/customer.checkout.summary.js"></script>
 <script src="customer.purchase/customer.purchase.js"></script>
 <script src="customer.purchase.summary/customer.purchase.summary.js"></script>
 <!-- /scripts -->
