Add order summary for box office checkout

--- a/app/boxoffice.html
+++ b/app/boxoffice.html
@@ -53,6 +53,7 @@
 <script src="common.event/common.event.js"></script>
 <script src="common.block/common.block.js"></script>
 <script src="boxoffice.checkout/boxoffice.checkout.js"></script>
+<script src="boxoffice.checkout.summary/boxoffice.checkout.summary.js"></script>
 <!-- /scripts -->
 </body>
 </html>
