Credit card payment error handling

--- a/app/customer.html
+++ b/app/customer.html
@@ -60,6 +60,7 @@
 <script src="customer.checkout.summary/customer.checkout.summary.js"></script>
 <script src="customer.purchase/customer.purchase.js"></script>
 <script src="customer.purchase.summary/customer.purchase.summary.js"></script>
+<script src="customer.purchase.error/customer.purchase.error.js"></script>
 <!-- /scripts -->
 </body>
 </html>
