--- a/app/customer.purchase/customer.purchase.html
+++ b/app/customer.purchase/customer.purchase.html
@@ -3,6 +3,9 @@
         <toolbar/>
     </div>
 </div>
+<div class="row" ng-show="errorMessage !== ''">
+    <div class="twelve columns error">{{errorMessage}}</div>
+</div>
 <div class="row">
     <div class="six columns">
         <ul class="checkout-reservations">
