--- a/app/common.block/common.block.html
+++ b/app/common.block/common.block.html
@@ -5,8 +5,9 @@
 </div>
 <div class="row">
     <div class="twelve columns">
-        <h2>{{block.event.name}}</h2>
-        <p>{{block.event.dateandtime}} - {{block.event.location}}</p>
+        <h3>{{block.event.name}}</h3>
+        <p>{{block.event.dateandtime}} - {{block.event.location}}<br>
+        {{block.block.name}}</p>
     </div>
 </div>
 <div class="row">
