--- a/app/customer.events/customer.events.html
+++ b/app/customer.events/customer.events.html
@@ -7,7 +7,7 @@
     <div class="twelve columns">
         <ul class="item-list">
             <li ng-repeat="event in events">
-                <a href="#/event/{{event.id}}">{{event.name}} - {{event.dateandtime}}</a>
+                <a href="#/event/{{event.id}}">{{event.name}} - {{event.location}} - {{event.dateandtime}}</a>
             </li>
         </ul>
     </div>
