--- a/app/common.block/common.block.html
+++ b/app/common.block/common.block.html
@@ -10,7 +10,7 @@
         {{block.block.name}}</p>
     </div>
 </div>
-<div class="row">
+<div class="row overflow-wrapper">
     <div class="twelve columns">
         <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="block.event_id" categoryid="block.category_id" seats="block.seats">
     </div>
