Add merged seat selection

--- a/app/common.block/common.block.html
+++ b/app/common.block/common.block.html
@@ -12,6 +12,6 @@
 </div>
 <div class="row overflow-wrapper">
     <div class="twelve columns">
-        <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="block.event_id" categoryid="block.category_id" seats="block.seats">
+        <ng-merged-seat-selection src="block.seatplan_image_data_url" eventid="block.event.id" parts="block.parts">
     </div>
 </div>
