--- a/app/common.event/common.event.html
+++ b/app/common.event/common.event.html
@@ -9,7 +9,7 @@
         <p>{{event.dateandtime}}</p>
         <ul class="item-list">
             <li ng-repeat="block in event.blocks">
-                <a href="#/block/{{block.id}}">{{block.block.name}}</a>
+                <a href="#/block/{{block.id}}">{{block.name}}</a>
             </li>
         </ul>
     </div>
