Add color to category definition

--- a/app/admin.categories/admin.categories.html
+++ b/app/admin.categories/admin.categories.html
@@ -19,6 +19,8 @@
         <div class="eight columns">
             <label for="category-name-{{category.id}}">Name</label>
             <input type="text" ng-model="category.name" id="category-name-{{category.id}}">
+            <label for="category-color-{{category.id}}">Color</label>
+            <input type="text" ng-model="category.color" id="category-color-{{category.id}}">
             <label for="category-price-{{category.id}}">Price ({{currency}})</label>
             <input type="number" ng-model="category.price" id="category-price-{{category.id}}">
             <label for="category-price_reduced-{{category.id}}">Reduced Price ({{currency}})</label>
