Display event location on checkout page

--- a/app/customer.checkout.summary/customer.checkout.summary.html
+++ b/app/customer.checkout.summary/customer.checkout.summary.html
@@ -16,7 +16,7 @@
             <li ng-repeat="reservation in order.reservations">
                 <h2>{{reservation.seat.name}}</h2>
                 <p>{{reservation.category.name}}</p>
-                <p>{{reservation.event.name}}, {{reservation.event.dateandtime}}</p>
+                <p>{{reservation.event.name}} - {{reservation.event.location}}, {{reservation.event.dateandtime}}</p>
                 <p style="font-weight:bold;" ng-show="{{reservation.isReduced}}" translate>REDUCED</p>
                 <p class="reservation-price">{{reservation.price}} {{currency}}</p>
                 <div class="clear"></div>
