--- a/app/customer.purchase/customer.purchase.html
+++ b/app/customer.purchase/customer.purchase.html
@@ -13,7 +13,7 @@
                 <p class="reservation-release"><a class="button button-primary" ng-click="release(reservation)">✕</a></p>
                 <h2>{{reservation.seat.name}}</h2>
                 <p>{{reservation.category.name}}</p>
-                <p>{{reservation.event.name}}, {{reservation.event.dateandtime}}</p>
+                <p>{{reservation.event.name}} - {{reservation.event.location}}, {{reservation.event.dateandtime}}</p>
                 <p><label><input type="checkbox" ng-checked="{{reservation.isReduced}}" ng-click="toggleReduction(reservation)"> <translate>REDUCED</translate></label></p>
                 <p class="reservation-price">{{reservation.price}} {{currency}}</p>
                 <div class="clear"></div>
