Add boxoffice actions page

--- a/app/boxoffice.html
+++ b/app/boxoffice.html
@@ -53,6 +53,7 @@
 <script src="components/seatplan/seatplan.js"></script>
 <script src="common.toolbar/common.toolbar.js"></script>
 <script src="boxoffice.events/boxoffice.events.js"></script>
+<script src="boxoffice.actions/boxoffice.actions.js"></script>
 <script src="boxoffice.event.orders/boxoffice.event.orders.js"></script>
 <script src="common.event/common.event.js"></script>
 <script src="common.block/common.block.js"></script>
