Improve boxoffice actions page

--- a/app/boxoffice.actions/boxoffice.actions.html
+++ b/app/boxoffice.actions/boxoffice.actions.html
@@ -1,6 +1,7 @@
 <div class="row actions">
-    <div class="twelve columns">
-        <h2 class="actions-title" translate>ACTIONS TITLE</h2>
+    <div class="twelve columns actions-title">
+        <h2 translate>CONCERT BOX OFFICE</h2>
+        <p>{{event.name}} | {{event.location}} | {{event.dateandtime}}</p>
     </div>
 </div>
 <div class="row actions-buttons">
