Duplicate event, block and toolbar

--- a/app/boxoffice.html
+++ b/app/boxoffice.html
@@ -51,12 +51,12 @@
 <script src="components/reserver/reserver.js"></script>
 <script src="common.seatplan.handlers/common.seatplan.handlers.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
-<script src="common.toolbar/common.toolbar.js"></script>
+<script src="boxoffice.toolbar/boxoffice.toolbar.js"></script>
 <script src="boxoffice.events/boxoffice.events.js"></script>
 <script src="boxoffice.actions/boxoffice.actions.js"></script>
 <script src="boxoffice.event.orders/boxoffice.event.orders.js"></script>
-<script src="common.event/common.event.js"></script>
-<script src="common.block/common.block.js"></script>
+<script src="boxoffice.event/boxoffice.event.js"></script>
+<script src="boxoffice.block/boxoffice.block.js"></script>
 <script src="boxoffice.checkout/boxoffice.checkout.js"></script>
 <script src="boxoffice.checkout.summary/boxoffice.checkout.summary.js"></script>
 <!-- /scripts -->
