--- a/app/customer.html
+++ b/app/customer.html
@@ -52,10 +52,10 @@
 <script src="components/reserver/reserver.js"></script>
 <script src="common.seatplan.handlers/common.seatplan.handlers.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
-<script src="common.toolbar/common.toolbar.js"></script>
+<script src="customer.toolbar/customer.toolbar.js"></script>
 <script src="customer.events/customer.events.js"></script>
-<script src="common.event/common.event.js"></script>
-<script src="common.block/common.block.js"></script>
+<script src="customer.event/customer.event.js"></script>
+<script src="customer.block/customer.block.js"></script>
 <script src="customer.checkout/customer.checkout.js"></script>
 <script src="customer.checkout.summary/customer.checkout.summary.js"></script>
 <script src="customer.purchase/customer.purchase.js"></script>
