--- a/app/boxoffice.toolbar/boxoffice.toolbar.html
+++ b/app/boxoffice.toolbar/boxoffice.toolbar.html
@@ -7,10 +7,10 @@
 <div class="row header-bottom">
     <div class="twelve columns">
         <p>
-            <a class="button button-primary action-button" ng-show="controller !== 'EventsCtrl'" href="#/events" translate>SELECT MORE SEATS (HEADER)</a>
+            <a class="button button-primary action-button" ng-click="cancel()" translate>CANCEL (HEADER)</a>
+            <a class="button button-primary action-button" ng-show="controller === 'CheckoutCtrl' && boxoffice.event_id !== undefined" ng-href="#/event/{{boxoffice.event_id}}" translate>SELECT MORE SEATS (HEADER)</a>
+            <a class="button button-primary action-button" ng-show="controller === 'CheckoutCtrl' && boxoffice.event_id === undefined" ng-href="#/events" translate>SELECT MORE SEATS (HEADER)</a>
             <a class="button button-primary action-button" ng-show="reservations.length > 0 && controller !== 'CheckoutCtrl'" href="#/checkout" translate>CHECKOUT AND REDUCTIONS (HEADER)</a>
-            <a class="button button-primary action-button" ng-show="canCustomerPurchase && reservations.length > 0 && controller !== 'PurchaseCtrl'" href="#/purchase" translate>PURCHASE AND REDUCTIONS (HEADER)</a>
-            <a class="button button-primary action-button" ng-show="reservations.length > 0" ng-click="cancel()" translate>CANCEL (HEADER)</a>
         </p>
     </div>
 </div>
@@ -26,10 +26,10 @@
             <a class="button mobile-toggle-button" ng-show="(controller !== 'EventsCtrl' || reservations.length > 0) && !areButtonsVisible" ng-click="toggleButtonsVisibility()">+</a>
             <a class="button mobile-toggle-button" ng-show="areButtonsVisible" ng-click="toggleButtonsVisibility()">–</a>
             <div class="buttons">
-                <a class="button button-primary action-button" ng-show="controller !== 'EventsCtrl'" href="#/events" translate>SELECT MORE SEATS (TOOLBAR)</a>
+                <a class="button button-primary action-button" ng-click="cancel()" translate>CANCEL (TOOLBAR)</a>
+                <a class="button button-primary action-button" ng-show="controller === 'CheckoutCtrl' && boxoffice.event_id !== undefined" ng-href="#/event/{{boxoffice.event_id}}" translate>SELECT MORE SEATS (TOOLBAR)</a>
+                <a class="button button-primary action-button" ng-show="controller === 'CheckoutCtrl' && boxoffice.event_id === undefined" href="#/events" translate>SELECT MORE SEATS (TOOLBAR)</a>
                 <a class="button button-primary action-button" ng-show="reservations.length > 0 && controller !== 'CheckoutCtrl'" href="#/checkout" translate>CHECKOUT AND REDUCTIONS (TOOLBAR)</a>
-                <a class="button button-primary action-button" ng-show="canCustomerPurchase && reservations.length > 0 && controller !== 'PurchaseCtrl'" href="#/purchase" translate>PURCHASE AND REDUCTIONS (TOOLBAR)</a>
-                <a class="button button-primary action-button" ng-show="reservations.length > 0" ng-click="cancel()" translate>CANCEL (TOOLBAR)</a>
             </div>
          </p>
     </div>
