--- a/app/boxoffice.event.orders/boxoffice.event.orders.html
+++ b/app/boxoffice.event.orders/boxoffice.event.orders.html
@@ -23,7 +23,7 @@
         <br ng-show="selectedOrder === order">
         <br ng-show="selectedOrder === order">
         <div>
-            <a ng-show="selectedOrder === order" ng-click="sell(order)" class="button button-primary checkout" translate>SELL</a>
+            <a ng-show="selectedOrder === order" ng-click="sell(order, eventId)" class="button button-primary checkout" translate>SELL</a>
         </div>
     </div>
 </div>
