Add unnumbered seats

--- a/app/admin.html
+++ b/app/admin.html
@@ -54,6 +54,7 @@
 <script src="admin.event.blocks/admin.event.blocks.js"></script>
 <script src="admin.block.image/admin.block.image.js"></script>
 <script src="admin.block.seats/admin.block.seats.js"></script>
+<script src="admin.block.seats.unnumbered/admin.block.seats.unnumbered.js"></script>
 <!-- /scripts -->
 </body>
 </html>
