--- a/app/customer.block/customer.block.html
+++ b/app/customer.block/customer.block.html
@@ -7,7 +7,7 @@
     <div class="twelve columns">
         <h3>{{block.event.name}}</h3>
         <p>{{block.event.dateandtime}} - {{block.event.location}}<br>
-        {{block.name}}</p>
+        {{block.block.name}}</p>
     </div>
 </div>
 <div ng-show="block.numbered" class="row overflow-wrapper">
@@ -16,18 +16,16 @@
     </div>
 </div>
 <div ng-show="!block.numbered" class="row">
-    <form name="unnumberedSeatSelectionForm" ng-submit="reserveMultiple(block, data.numberOfSeats)">
-        <div class="four columns">
-            <p translate>UNSPECIFIED SEATS MESSAGE</p>
-            <input type="number" min="1" max="{{maxNumberOfUnspecifiedSeats}}" ng-model="data.numberOfSeats" name="numberOfSeats" translate-attr="{ placeholder: 'NUMBER OF SEATS' }" class="u-full-width" required>
-            <div
-                class="hint"
-                ng-show="unnumberedSeatSelectionForm.numberOfSeats.$touched && (unnumberedSeatSelectionForm.numberOfSeats.$error.required || unnumberedSeatSelectionForm.numberOfSeats.$error.min || unnumberedSeatSelectionForm.numberOfSeats.$error.max)"
-                translate="UNSPECIFIED SEATS VALIDATION TEXT"
-                translate-values="{ max: {{maxNumberOfUnspecifiedSeats}} }"></div>
-        </div>
-        <div class="four columns">
-            <input type="submit" ng-disabled="!unnumberedSeatSelectionForm.$valid" title="{{!unnumberedSeatSelectionForm.$valid ? 'PLEASE SELECT A NUMBER OF SEATS' : '' | translate}}" translate-attr="{ value: 'ADD SEATS' }" class="checkout button button-primary">
+    <form name="unnumberedSeatSelectionForm" ng-submit="reserveMultipleAndContinue(block, data.numberOfSeats)">
+        <div class="six columns">
+            <label for="numberOfSeats" translate>UNSPECIFIED SEATS MESSAGE</label>
+            <select
+                ng-model="data.numberOfSeats"
+                ng-change="reserveMultiple(block, data.numberOfSeats)"
+                name="numberOfSeats">
+                <option value="0" translate>PLEASE SELECT</option>
+                <option value="{{i}}" ng-repeat="i in selectableNumbersOfUnspecifiedSeats">{{i}}</option>
+            </select>
         </div>
     </form>
 </div>
