Implement JWT auth

--- a/app/admin.html
+++ b/app/admin.html
@@ -44,6 +44,7 @@
 <script src="components/seatplan/seatplan.js"></script>
 <script src="components/canvas/canvas.js"></script>
 <script src="components/itemlist/itemlist.js"></script>
+<script src="admin.login/admin.login.js"></script>
 <script src="admin.dashboard/admin.dashboard.js"></script>
 <script src="admin.reservations/admin.reservations.js"></script>
 <script src="admin.events/admin.events.js"></script>
