Add logo to event

--- a/app/admin.html
+++ b/app/admin.html
@@ -36,6 +36,7 @@
 <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/ocanvas/index.js"></script>
+<script src="bower_components/angular-image-upload-datauri/src/imageupload.js"></script>
 <script src="components/progressInterceptor/progressInterceptor.js"></script>
 <script src="admin.app.js"></script>
 <script src="admin.config/config.js"></script>
