--- a/app/admin.events/admin.events.html
+++ b/app/admin.events/admin.events.html
@@ -31,6 +31,15 @@
             <label for="event-dateandtime-{{event.id}}">Date and Time</label>
             <input type="text" ng-model="event.dateandtime" id="event-dateandtime-{{event.id}}">
             <label for="event-visible-{{event.id}}"><input type="checkbox" ng-model="event.visible" id="event-visible-{{event.id}}"> Visible</label>
+            <button
+                class="button"
+                input-image
+                append-data-uri
+                ng-model="image"
+                ng-change="uploadImage(event, image)">
+                Upload logo
+            </button>
+            <img ng-show="event.logo_image_data_url" ng-src="{{event.logo_image_data_url}}" />
         </div>
         <div class="four columns">
             <a class="button button-primary" ng-click="cancel()">cancel</a>
